syntax = "proto3";
import "Open-IM-Server/pkg/proto/sdk_ws/ws.proto";
package pbAuth;
option go_package = "Open_IM/pkg/proto/auth;pbAuth";


message userTokenReq {
    int32  platformID = 1;
    string userID = 2;
}
message userTokenResp {
    string token = 2;
    int64  expireTimeSeconds = 3;
}

message forceLogoutReq {
    int32  platformID = 1;
    string userID = 2;
}
message forceLogoutResp {
}

message parseTokenReq{
    string token = 1;
}
message parseTokenResp{
    string userID = 1;
    string platform = 2;
    int64 expireTimeSeconds = 4;
}

service Auth {
    rpc userToken(userTokenReq) returns(userTokenResp);
    rpc forceLogout(forceLogoutReq) returns(forceLogoutResp);
    rpc parseToken(parseTokenReq)returns(parseTokenResp);
}


